--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -72,7 +72,7 @@
         const fileInput = document.getElementById("fileInput");
         const randomize = document.getElementById("randomizeCheckbox").checked;
         const format = document.querySelector(
-          'input[name="format"]:checked'
+          'input[name="format"]:checked',
         ).value;
 
         if (fileInput.files.length === 0) {
@@ -130,6 +130,54 @@
         \\node at (\\dwidth/2,\\dheight/4) {\\Large #2};
         \\end{tikzpicture}
     }
+
+    \\newcommand{\\myplot}[5]{
+     \\begin{tikzpicture}
+          \\begin{axis}[
+               grid = both,
+               axis lines = middle,
+               xlabel = $x$,
+               x label style={anchor=west},
+               ylabel = $y$,
+               y label style={anchor=south},
+               xmin = #2 , xmax = #3,
+               ymin = #4, ymax = #5,
+               restrict y to domain=#4:#5,
+               xtick distance=1,
+               ytick distance=1,
+              ]
+              \\addplot[line width=1mm, domain=#2*1.1:#3*1.1, samples=100, color=red]{#1};
+          \\end{axis}
+      \\end{tikzpicture}
+}
+
+\\newcommand{\\myvplot}[5]{
+     \\begin{tikzpicture}
+          \\begin{axis}[
+               grid = both,
+               axis lines = middle,
+               xlabel = $x$,
+               x label style={anchor=west},
+               ylabel = $y$,
+               y label style={anchor=south},
+               xmin = #2 , xmax = #3,
+               ymin = #4, ymax = #5,
+               restrict y to domain=#4:#5,
+               xtick distance=1,
+               ytick distance=1,
+              ]
+              \\addplot [line width=1mm, samples=100, color=red]coordinates {(#1,#5) (#1,#4)};
+          \\end{axis}
+      \\end{tikzpicture}
+}
+
+\\newcommand{\\plotbox}[5]{
+    \\resizebox{0.2\\textwidth}{!}{\\myplot{#1}{#2}{#3}{#4}{#5}}
+}
+
+\\newcommand{\\vplotbox}[5]{
+    \\resizebox{0.2\\textwidth}{!}{\\myvplot{#1}{#2}{#3}{#4}{#5}}
+}
 \\pagestyle{empty}
 \\begin{document}
 \\begin{center}`;
